@@ -59,9 +59,11 @@ import org.jruby.RubyArray;
 import org.jruby.RubyClass;
 import org.jruby.RubyClassPathVariable;
 import org.jruby.RubyException;
+import org.jruby.RubyMethod;
 import org.jruby.RubyModule;
 import org.jruby.RubyProc;
 import org.jruby.RubyString;
+import org.jruby.RubyUnboundMethod;
 import org.jruby.common.IRubyWarnings.ID;
 import org.jruby.exceptions.RaiseException;
 import org.jruby.javasupport.proxy.JavaProxyClass;
@@ -82,10 +84,16 @@ import org.jruby.java.MiniJava;
 import org.jruby.java.addons.ArrayJavaAddons;
 import org.jruby.java.addons.IOJavaAddons;
 import org.jruby.java.addons.StringJavaAddons;
+import org.jruby.java.dispatch.CallableSelector;
+import org.jruby.java.invokers.InstanceMethodInvoker;
+import org.jruby.java.invokers.MethodInvoker;
+import org.jruby.java.invokers.StaticMethodInvoker;
 import org.jruby.java.proxies.ArrayJavaProxy;
 import org.jruby.java.proxies.ConcreteJavaProxy;
 import org.jruby.java.proxies.JavaProxy;
 import org.jruby.runtime.callback.Callback;
+import org.jruby.util.CodegenUtils;
+import org.jruby.util.SafePropertyAccessor;
 
 @JRubyModule(name = "Java")
 public class Java implements Library {
@@ -244,97 +252,6 @@ public class Java implements Library {
         nameClassMap.put("java.lang.String", stringClass);
     }
 
-    @JRubyModule(name = "JavaUtilities")
-    public static class JavaUtilities {
-        @JRubyMethod(module = true, visibility = Visibility.PRIVATE)
-        public static IRubyObject wrap(IRubyObject recv, IRubyObject arg0) {
-            return Java.wrap(recv, arg0);
-        }
-        
-        @JRubyMethod(name = "valid_constant_name?", module = true, visibility = Visibility.PRIVATE)
-        public static IRubyObject valid_constant_name_p(IRubyObject recv, IRubyObject arg0) {
-            return Java.valid_constant_name_p(recv, arg0);
-        }
-        
-        @JRubyMethod(module = true, visibility = Visibility.PRIVATE)
-        public static IRubyObject primitive_match(IRubyObject recv, IRubyObject arg0, IRubyObject arg1) {
-            return Java.primitive_match(recv, arg0, arg1);
-        }
-        
-        @JRubyMethod(module = true, visibility = Visibility.PRIVATE)
-        public static IRubyObject access(IRubyObject recv, IRubyObject arg0) {
-            return Java.access(recv, arg0);
-        }
-        
-        @JRubyMethod(module = true, visibility = Visibility.PRIVATE)
-        public static IRubyObject matching_method(IRubyObject recv, IRubyObject arg0, IRubyObject arg1) {
-            return Java.matching_method(recv, arg0, arg1);
-        }
-        
-        @JRubyMethod(module = true, visibility = Visibility.PRIVATE)
-        public static IRubyObject set_java_object(IRubyObject recv, IRubyObject self, IRubyObject java_object) {
-            self.getInstanceVariables().fastSetInstanceVariable("@java_object", java_object);
-            self.dataWrapStruct(java_object);
-            return java_object;
-        }
-        
-        @JRubyMethod(module = true, visibility = Visibility.PRIVATE)
-        public static IRubyObject get_deprecated_interface_proxy(ThreadContext context, IRubyObject recv, IRubyObject arg0) {
-            return Java.get_deprecated_interface_proxy(context, recv, arg0);
-        }
-        
-        @JRubyMethod(module = true, visibility = Visibility.PRIVATE)
-        public static IRubyObject get_interface_module(IRubyObject recv, IRubyObject arg0) {
-            return Java.get_interface_module(recv, arg0);
-        }
-        
-        @JRubyMethod(module = true, visibility = Visibility.PRIVATE)
-        public static IRubyObject get_package_module(IRubyObject recv, IRubyObject arg0) {
-            return Java.get_package_module(recv, arg0);
-        }
-        
-        @JRubyMethod(module = true, visibility = Visibility.PRIVATE)
-        public static IRubyObject get_package_module_dot_format(IRubyObject recv, IRubyObject arg0) {
-            return Java.get_package_module_dot_format(recv, arg0);
-        }
-        
-        @JRubyMethod(module = true, visibility = Visibility.PRIVATE)
-        public static IRubyObject get_proxy_class(IRubyObject recv, IRubyObject arg0) {
-            return Java.get_proxy_class(recv, arg0);
-        }
-        
-        @JRubyMethod(module = true, visibility = Visibility.PRIVATE)
-        public static IRubyObject is_primitive_type(IRubyObject recv, IRubyObject arg0) {
-            return Java.is_primitive_type(recv, arg0);
-        }
-
-        @JRubyMethod(module = true, visibility = Visibility.PRIVATE)
-        public static IRubyObject create_proxy_class(IRubyObject recv, IRubyObject arg0, IRubyObject arg1, IRubyObject arg2) {
-            return Java.create_proxy_class(recv, arg0, arg1, arg2);
-        }
-        
-        @JRubyMethod(module = true, visibility = Visibility.PRIVATE)
-        public static IRubyObject get_java_class(IRubyObject recv, IRubyObject arg0) {
-            return Java.get_java_class(recv, arg0);
-        }
-        
-        @JRubyMethod(module = true, visibility = Visibility.PRIVATE)
-        public static IRubyObject get_top_level_proxy_or_package(ThreadContext context, IRubyObject recv, IRubyObject arg0) {
-            return Java.get_top_level_proxy_or_package(context, recv, arg0);
-        }
-        
-        @JRubyMethod(module = true, backtrace = true, visibility = Visibility.PRIVATE)
-        public static IRubyObject get_proxy_or_package_under_package(ThreadContext context, IRubyObject recv, IRubyObject arg0, IRubyObject arg1) {
-            return Java.get_proxy_or_package_under_package(context, recv, arg0, arg1);
-        }
-        
-        @Deprecated
-        @JRubyMethod(module = true, visibility = Visibility.PRIVATE)
-        public static IRubyObject add_proxy_extender(IRubyObject recv, IRubyObject arg0) {
-            return Java.add_proxy_extender(recv, arg0);
-        }
-    }
-
     private static final ClassProvider JAVA_PACKAGE_CLASS_PROVIDER = new ClassProvider() {
 
         public RubyClass defineClassUnder(RubyModule pkg, String name, RubyClass superClazz) {
@@ -361,22 +278,17 @@ public class Java implements Library {
             }
             Ruby runtime = pkg.getRuntime();
             return (RubyModule) get_interface_module(
-                    runtime.getJavaSupport().getJavaUtilitiesModule(),
+                    runtime,
                     JavaClass.forNameVerbose(runtime, packageName.asJavaString() + name));
         }
     };
-    private static final Map<String, Boolean> JAVA_PRIMITIVES = new HashMap<String, Boolean>();
-    
 
+    private static final Map<String, Boolean> JAVA_PRIMITIVES = new HashMap<String, Boolean>();
     static {
         String[] primitives = {"boolean", "byte", "char", "short", "int", "long", "float", "double"};
         for (String primitive : primitives) {
             JAVA_PRIMITIVES.put(primitive, Boolean.TRUE);
         }
-    }
-
-    public static IRubyObject is_primitive_type(IRubyObject recv, IRubyObject sym) {
-        return recv.getRuntime().newBoolean(JAVA_PRIMITIVES.containsKey(sym.asJavaString()));
     }
 
     public static IRubyObject create_proxy_class(
@@ -394,40 +306,9 @@ public class Java implements Library {
         try {
             return JavaClass.for_name(recv, name);
         } catch (Exception e) {
+            recv.getRuntime().getJavaSupport().handleNativeException(e, null);
             return recv.getRuntime().getNil();
         }
-    }
-
-    /**
-     * Returns a new proxy instance of type (RubyClass)recv for the wrapped java_object,
-     * or the cached proxy if we've already seen this object.
-     * 
-     * @param recv the class for this object
-     * @param java_object the java object wrapped in a JavaObject wrapper
-     * @return the new or cached proxy for the specified Java object
-     */
-    public static IRubyObject new_instance_for(IRubyObject recv, IRubyObject java_object) {
-        // FIXME: note temporary double-allocation of JavaObject as we move to cleaner interface
-        if (java_object instanceof JavaObject) {
-            return getInstance(((JavaObject) java_object).getValue(), (RubyClass) recv);
-        }
-        // in theory we should never get here, keeping around temporarily
-        IRubyObject new_instance = ((RubyClass) recv).allocate();
-        new_instance.getInstanceVariables().fastSetInstanceVariable("@java_object", java_object);
-        new_instance.dataWrapStruct(java_object);
-        return new_instance;
-    }
-
-    /**
-     * Returns a new proxy instance of type clazz for rawJavaObject, or the cached
-     * proxy if we've already seen this object.
-     * 
-     * @param rawJavaObject
-     * @param clazz
-     * @return the new or cached proxy for the specified Java object
-     */
-    public static IRubyObject getInstance(Object rawJavaObject, RubyClass clazz) {
-        return clazz.getRuntime().getJavaSupport().getObjectProxyCache().getOrCreate(rawJavaObject, clazz);
     }
 
     /**
@@ -448,29 +329,6 @@ public class Java implements Library {
                     (RubyClass) getProxyClass(runtime, JavaClass.get(runtime, rawJavaObject.getClass())));
         }
         return runtime.getNil();
-    }
-
-    // If the proxy class itself is passed as a parameter this will be called by Java#ruby_to_java    
-    public static IRubyObject to_java_object(IRubyObject recv) {
-        return recv.getInstanceVariables().fastGetInstanceVariable("@java_class");
-    }
-
-    // JavaUtilities
-    /**
-     * Add a new proxy extender. This is used by JavaUtilities to allow adding methods
-     * to a given type's proxy and all types descending from that proxy's Java class.
-     */
-    @Deprecated
-    public static IRubyObject add_proxy_extender(IRubyObject recv, IRubyObject extender) {
-        // hacky workaround in case any users call this directly.
-        // most will have called JavaUtilities.extend_proxy instead.
-        recv.getRuntime().getWarnings().warn(ID.DEPRECATED_METHOD, "JavaUtilities.add_proxy_extender is deprecated - use JavaUtilities.extend_proxy instead", "add_proxy_extender", "JavaUtilities.extend_proxy");
-        IRubyObject javaClassVar = extender.getInstanceVariables().fastGetInstanceVariable("@java_class");
-        if (!(javaClassVar instanceof JavaClass)) {
-            throw recv.getRuntime().newArgumentError("extender does not have a valid @java_class");
-        }
-        ((JavaClass) javaClassVar).addProxyExtender(extender);
-        return recv.getRuntime().getNil();
     }
 
     public static RubyModule getInterfaceModule(Ruby runtime, JavaClass javaClass) {
@@ -502,11 +360,10 @@ public class Java implements Library {
         return interfaceModule;
     }
 
-    public static IRubyObject get_interface_module(IRubyObject recv, IRubyObject javaClassObject) {
-        Ruby runtime = recv.getRuntime();
+    public static IRubyObject get_interface_module(Ruby runtime, IRubyObject javaClassObject) {
         JavaClass javaClass;
         if (javaClassObject instanceof RubyString) {
-            javaClass = JavaClass.for_name(recv, javaClassObject);
+            javaClass = JavaClass.forNameVerbose(runtime, javaClassObject.asJavaString());
         } else if (javaClassObject instanceof JavaClass) {
             javaClass = (JavaClass) javaClassObject;
         } else {
@@ -515,51 +372,8 @@ public class Java implements Library {
         return getInterfaceModule(runtime, javaClass);
     }
 
-    // Note: this isn't really all that deprecated, as it is used for
-    // internal purposes, at least for now. But users should be discouraged
-    // from calling this directly; eventually it will go away.
-    public static IRubyObject get_deprecated_interface_proxy(ThreadContext context, IRubyObject recv, IRubyObject javaClassObject) {
-        Ruby runtime = context.getRuntime();
-        JavaClass javaClass;
-        if (javaClassObject instanceof RubyString) {
-            javaClass = JavaClass.for_name(recv, javaClassObject);
-        } else if (javaClassObject instanceof JavaClass) {
-            javaClass = (JavaClass) javaClassObject;
-        } else {
-            throw runtime.newArgumentError("expected JavaClass, got " + javaClassObject);
-        }
-        if (!javaClass.javaClass().isInterface()) {
-            throw runtime.newArgumentError("expected Java interface class, got " + javaClassObject);
-        }
-        RubyClass proxyClass;
-        if ((proxyClass = javaClass.getProxyClass()) != null) {
-            return proxyClass;
-        }
-        javaClass.lockProxy();
-        try {
-            if ((proxyClass = javaClass.getProxyClass()) == null) {
-                RubyModule interfaceModule = getInterfaceModule(runtime, javaClass);
-                RubyClass interfaceJavaProxy = runtime.fastGetClass("InterfaceJavaProxy");
-                proxyClass = RubyClass.newClass(runtime, interfaceJavaProxy);
-                proxyClass.setAllocator(interfaceJavaProxy.getAllocator());
-                proxyClass.makeMetaClass(interfaceJavaProxy.getMetaClass());
-                // parent.setConstant(name, proxyClass); // where the name should come from ?
-                proxyClass.inherit(interfaceJavaProxy);
-                proxyClass.callMethod(context, "java_class=", javaClass);
-                // including interface module so old-style interface "subclasses" will
-                // respond correctly to #kind_of?, etc.
-                proxyClass.includeModule(interfaceModule);
-                javaClass.setupProxy(proxyClass);
-                // add reference to interface module
-                if (proxyClass.fastGetConstantAt("Includable") == null) {
-                    proxyClass.fastSetConstant("Includable", interfaceModule);
-                }
-
-            }
-        } finally {
-            javaClass.unlockProxy();
-        }
-        return proxyClass;
+    public static RubyClass getProxyClassForObject(Ruby runtime, Object object) {
+        return (RubyClass)getProxyClass(runtime, JavaClass.get(runtime, object.getClass()));
     }
 
     public static RubyModule getProxyClass(Ruby runtime, JavaClass javaClass) {
@@ -659,7 +473,108 @@ public class Java implements Library {
         }
         proxyClass.callMethod(runtime.getCurrentContext(), "java_class=", javaClass);
         javaClass.setupProxy(proxyClass);
+
+        // add java_method for unbound use
+        proxyClass.defineAnnotatedMethods(JavaProxyClassMethods.class);
         return proxyClass;
+    }
+
+    public static class JavaProxyClassMethods {
+        @JRubyMethod(backtrace = true, meta = true)
+        public static IRubyObject java_method(ThreadContext context, IRubyObject proxyClass, IRubyObject rubyName) {
+            String name = rubyName.asJavaString();
+
+            return getRubyMethod(context, proxyClass, name);
+        }
+
+        @JRubyMethod(backtrace = true, meta = true)
+        public static IRubyObject java_method(ThreadContext context, IRubyObject proxyClass, IRubyObject rubyName, IRubyObject argTypes) {
+            String name = rubyName.asJavaString();
+            RubyArray argTypesAry = argTypes.convertToArray();
+            Class[] argTypesClasses = (Class[])argTypesAry.toArray(new Class[argTypesAry.size()]);
+
+            return getRubyMethod(context, proxyClass, name, argTypesClasses);
+        }
+
+        @JRubyMethod(backtrace = true, meta = true, visibility = Visibility.PRIVATE)
+        public static IRubyObject java_alias(ThreadContext context, IRubyObject proxyClass, IRubyObject newName, IRubyObject rubyName) {
+            return java_alias(context, proxyClass, newName, rubyName, context.getRuntime().newEmptyArray());
+        }
+
+        @JRubyMethod(backtrace = true, meta = true, visibility = Visibility.PRIVATE)
+        public static IRubyObject java_alias(ThreadContext context, IRubyObject proxyClass, IRubyObject newName, IRubyObject rubyName, IRubyObject argTypes) {
+            String name = rubyName.asJavaString();
+            String newNameStr = newName.asJavaString();
+            RubyArray argTypesAry = argTypes.convertToArray();
+            Class[] argTypesClasses = (Class[])argTypesAry.toArray(new Class[argTypesAry.size()]);
+            Ruby runtime = context.getRuntime();
+            RubyClass rubyClass;
+
+            if (proxyClass instanceof RubyClass) {
+                rubyClass = (RubyClass)proxyClass;
+            } else {
+                throw runtime.newTypeError(proxyClass, runtime.getModule());
+            }
+
+            Class jclass = (Class)((JavaClass)proxyClass.callMethod(context, "java_class")).getValue();
+
+            Method method = getMethodFromClass(runtime, jclass, name, argTypesClasses);
+            MethodInvoker invoker = getMethodInvokerForMethod(rubyClass, method);
+
+            if (Modifier.isStatic(method.getModifiers())) {
+                // add alias to meta
+                rubyClass.getSingletonClass().addMethod(newNameStr, invoker);
+            } else {
+                rubyClass.addMethod(newNameStr, invoker);
+            }
+
+            return runtime.getNil();
+        }
+    }
+
+    private static IRubyObject getRubyMethod(ThreadContext context, IRubyObject proxyClass, String name, Class... argTypesClasses) {
+        Ruby runtime = context.getRuntime();
+        RubyClass rubyClass;
+        
+        if (proxyClass instanceof RubyClass) {
+            rubyClass = (RubyClass)proxyClass;
+        } else {
+            throw runtime.newTypeError(proxyClass, runtime.getModule());
+        }
+
+        Class jclass = (Class)((JavaClass)proxyClass.callMethod(context, "java_class")).getValue();
+        String prettyName = name + CodegenUtils.prettyParams(argTypesClasses);
+        
+        try {
+            Method jmethod = jclass.getMethod(name, argTypesClasses);
+            MethodInvoker invoker;
+            if (Modifier.isStatic(jmethod.getModifiers())) {
+                invoker = new StaticMethodInvoker(rubyClass, jmethod);
+                return RubyMethod.newMethod(rubyClass, prettyName, rubyClass, name, invoker, proxyClass);
+            } else {
+                invoker = new InstanceMethodInvoker(rubyClass, jmethod);
+                return RubyUnboundMethod.newUnboundMethod(rubyClass, prettyName, rubyClass, name, invoker);
+            }
+        } catch (NoSuchMethodException nsme) {
+            String errorName = jclass.getName() + "." + prettyName;
+            throw runtime.newNameError("Java method not found: " + errorName, name);
+        }
+    }
+
+    public static Method getMethodFromClass(Ruby runtime, Class jclass, String name, Class... argTypes) {
+        try {
+            return jclass.getMethod(name, argTypes);
+        } catch (NoSuchMethodException nsme) {
+            throw JavaMethod.newMethodNotFoundError(runtime, jclass, name + CodegenUtils.prettyParams(argTypes), name);
+        }
+    }
+
+    private static MethodInvoker getMethodInvokerForMethod(RubyClass metaClass, Method method) {
+        if (Modifier.isStatic(method.getModifiers())) {
+            return new StaticMethodInvoker(metaClass.getMetaClass(), method);
+        } else {
+            return new InstanceMethodInvoker(metaClass, method);
+        }
     }
 
     public static IRubyObject concrete_proxy_inherited(IRubyObject recv, IRubyObject subclass) {
@@ -713,14 +628,14 @@ public class Java implements Library {
                 if (forArity.size() == 0) {
                     throw context.getRuntime().newArgumentError("wrong # of arguments for constructor");
                 }
-                JavaProxyConstructor matching = (JavaProxyConstructor)matchingCallableArityN(
+                JavaProxyConstructor matching = (JavaProxyConstructor)CallableSelector.matchingCallableArityN(
                         self,
                         methodCache,
                         forArity.toArray(new JavaProxyConstructor[forArity.size()]), args, args.length);
                 Object[] newArgs = new Object[args.length];
                 Class[] parameterTypes = matching.getParameterTypes();
                 for (int i = 0; i < args.length; i++) {
-                    newArgs[i] = JavaUtil.convertArgumentToType(context, args[i], parameterTypes[i]);
+                    newArgs[i] = args[i].toJava(parameterTypes[i]);
                 }
                 JavaObject newObject = matching.newInstance(self, newArgs);
                 return JavaUtilities.set_java_object(self, self, newObject);
@@ -798,7 +713,7 @@ public class Java implements Library {
     }
     private static final Pattern CAMEL_CASE_PACKAGE_SPLITTER = Pattern.compile("([a-z][0-9]*)([A-Z])");
 
-    public static RubyModule getPackageModule(Ruby runtime, String name) {
+    private static RubyModule getPackageModule(Ruby runtime, String name) {
         RubyModule javaModule = runtime.getJavaSupport().getJavaModule();
         IRubyObject value;
         if ((value = javaModule.getConstantAt(name)) instanceof RubyModule) {
@@ -824,7 +739,7 @@ public class Java implements Library {
         return module == null ? runtime.getNil() : module;
     }
 
-    public static RubyModule getProxyOrPackageUnderPackage(ThreadContext context, final Ruby runtime, 
+    private static RubyModule getProxyOrPackageUnderPackage(ThreadContext context, final Ruby runtime,
             RubyModule parentPackage, String sym) {
         IRubyObject packageNameObj = parentPackage.fastGetInstanceVariable("@package_name");
         if (packageNameObj == null) {
@@ -923,7 +838,7 @@ public class Java implements Library {
         return runtime.getNil();
     }
 
-    public static RubyModule getTopLevelProxyOrPackage(ThreadContext context, final Ruby runtime, String sym) {
+    private static RubyModule getTopLevelProxyOrPackage(ThreadContext context, final Ruby runtime, String sym) {
         final String name = sym.trim().intern();
         if (name.length() == 0) {
             throw runtime.newArgumentError("empty class or package name");
@@ -999,467 +914,20 @@ public class Java implements Library {
         return result != null ? result : runtime.getNil();
     }
 
-    public static IRubyObject matching_method(IRubyObject recv, IRubyObject methods, IRubyObject args) {
-        Map matchCache = recv.getRuntime().getJavaSupport().getMatchCache();
-
-        List<Class<?>> arg_types = new ArrayList<Class<?>>();
-        int alen = ((RubyArray) args).getLength();
-        IRubyObject[] aargs = ((RubyArray) args).toJavaArrayMaybeUnsafe();
-        for (int i = 0; i < alen; i++) {
-            if (aargs[i] instanceof JavaObject) {
-                arg_types.add(((JavaClass) ((JavaObject) aargs[i]).java_class()).javaClass());
-            } else {
-                arg_types.add(aargs[i].getClass());
-            }
-        }
-
-        Map ms = (Map) matchCache.get(methods);
-        if (ms == null) {
-            ms = new HashMap();
-            matchCache.put(methods, ms);
-        } else {
-            IRubyObject method = (IRubyObject) ms.get(arg_types);
-            if (method != null) {
-                return method;
-            }
-        }
-
-        int mlen = ((RubyArray) methods).getLength();
-        IRubyObject[] margs = ((RubyArray) methods).toJavaArrayMaybeUnsafe();
-
-        for (int i = 0; i < 2; i++) {
-            for (int k = 0; k < mlen; k++) {
-                IRubyObject method = margs[k];
-                List<Class<?>> types = Arrays.asList(((ParameterTypes) method).getParameterTypes());
-
-                // Compatible (by inheritance)
-                if (arg_types.size() == types.size()) {
-                    // Exact match
-                    if (types.equals(arg_types)) {
-                        ms.put(arg_types, method);
-                        return method;
-                    }
-
-                    boolean match = true;
-                    for (int j = 0; j < types.size(); j++) {
-                        if (!(JavaClass.assignable(types.get(j), arg_types.get(j)) &&
-                                (i > 0 || primitive_match(types.get(j), arg_types.get(j)))) && !JavaUtil.isDuckTypeConvertable(arg_types.get(j), types.get(j))) {
-                            match = false;
-                            break;
-                        }
-                    }
-                    if (match) {
-                        ms.put(arg_types, method);
-                        return method;
-                    }
-                } // Could check for varargs here?
-
-            }
-        }
-
-        throw argumentError(recv.getRuntime().getCurrentContext(), margs[0], recv, arg_types);
-    }
-    
-    public static int argsHashCode(Object[] a) {
-        if (a == null)
-            return 0;
- 
-        int result = 1;
- 
-        for (Object element : a)
-            result = 31 * result + (element == null ? 0 : element.getClass().hashCode());
- 
-        return result;
-    }
-    
-    public static int argsHashCode(Class[] a) {
-        if (a == null)
-            return 0;
- 
-        int result = 1;
- 
-        for (Class element : a)
-            result = 31 * result + (element == null ? 0 : element.hashCode());
- 
-        return result;
-    }
-    
-    public static int argsHashCode(IRubyObject a0) {
-        return 31 + classHashCode(a0);
-    }
-    
-    public static int argsHashCode(IRubyObject a0, IRubyObject a1) {
-        return 31 * (31 + classHashCode(a0)) + classHashCode(a1);
-    }
-    
-    public static int argsHashCode(IRubyObject a0, IRubyObject a1, IRubyObject a2) {
-        return 31 * (31 * (31 + classHashCode(a0)) + classHashCode(a1)) + classHashCode(a2);
-    }
-    
-    public static int argsHashCode(IRubyObject a0, IRubyObject a1, IRubyObject a2, IRubyObject a3) {
-        return 31 * (31 * (31 * (31 + classHashCode(a0)) + classHashCode(a1)) + classHashCode(a2)) + classHashCode(a3);
-    }
-    
-    private static int classHashCode(IRubyObject o) {
-        return o == null ? 0 : o.getJavaClass().hashCode();
-    }
-    
-    public static int argsHashCode(IRubyObject[] a) {
-        if (a == null)
-            return 0;
- 
-        int result = 1;
- 
-        for (IRubyObject element : a)
-            result = 31 * result + classHashCode(element);
- 
-        return result;
-    }
-    
-    public static Class argClass(Object a) {
-        if (a == null) return void.class;
-
-
-        return a.getClass();
-    }
-
-    public static Class argClass(IRubyObject a) {
-        if (a == null) return void.class;
-
-        return a.getJavaClass();
-    }
-
-    public static JavaCallable matching_method_internal(IRubyObject recv, Map cache, JavaCallable[] methods, Object[] args, int len) {
-        int signatureCode = argsHashCode(args);
-        JavaCallable method = (JavaCallable)cache.get(signatureCode);
-        if (method != null) {
-            return method;
-        }
-
-        int mlen = methods.length;
-
-        mfor:
-        for (int k = 0; k < mlen; k++) {
-            method = methods[k];
-            Class<?>[] types = ((ParameterTypes) method).getParameterTypes();
-            // Compatible (by inheritance)
-            if (len == types.length) {
-                // Exact match
-                boolean same = true;
-                for (int x = 0, y = len; x < y; x++) {
-                    if (!types[x].equals(argClass(args[x]))) {
-                        same = false;
-                        break;
-                    }
-                }
-                if (same) {
-                    cache.put(signatureCode, method);
-                    return method;
-                }
-
-                for (int j = 0, m = len; j < m; j++) {
-                    if (!(JavaClass.assignable(types[j], argClass(args[j])) &&
-                            primitive_match(types[j], argClass(args[j])))) {
-                        continue mfor;
-                    }
-                }
-                cache.put(signatureCode, method);
-                return method;
-            }
-        }
-
-        mfor:
-        for (int k = 0; k < mlen; k++) {
-            method = methods[k];
-            Class<?>[] types = ((ParameterTypes) method).getParameterTypes();
-            // Compatible (by inheritance)
-            if (len == types.length) {
-                for (int j = 0, m = len; j < m; j++) {
-                    if (!JavaClass.assignable(types[j], argClass(args[j])) && !JavaUtil.isDuckTypeConvertable(argClass(args[j]), types[j])) {
-                        continue mfor;
-                    }
-                }
-                cache.put(signatureCode, method);
-                return method;
-            }
-        }
-
-        throw argTypesDoNotMatch(recv.getRuntime(), recv, methods, args);
-    }
-
-    // A version that just requires ParameterTypes; they will all move toward
-    // something similar soon
-    public static ParameterTypes matchingCallableArityN(IRubyObject recv, Map cache, ParameterTypes[] methods, IRubyObject[] args, int argsLength) {
-        int signatureCode = argsHashCode(args);
-        ParameterTypes method = (ParameterTypes)cache.get(signatureCode);
-        if (method == null) method = findMatchingCallableForArgs(recv, cache, signatureCode, methods, args);
-        return method;
-    }
-    private static ParameterTypes findMatchingCallableForArgs(IRubyObject recv, Map cache, int signatureCode, ParameterTypes[] methods, IRubyObject... args) {
-        ParameterTypes method = findCallable(methods, Exact, args);
-        if (method == null) method = findCallable(methods, AssignableAndPrimitivable, args);
-        if (method == null) method = findCallable(methods, AssignableOrDuckable, args);
-        if (method == null) {
-            throw argTypesDoNotMatch(recv.getRuntime(), recv, methods, (Object[]) args);
-        } else {
-            cache.put(signatureCode, method);
-            return method;
-        }
-    }
-    private static ParameterTypes findCallable(ParameterTypes[] callables, CallableAcceptor acceptor, IRubyObject... args) {
-        ParameterTypes bestCallable = null;
-        int bestScore = -1;
-        for (int k = 0; k < callables.length; k++) {
-            ParameterTypes callable = callables[k];
-            Class<?>[] types = callable.getParameterTypes();
-
-            if (acceptor.accept(types, args)) {
-                int currentScore = getExactnessScore(types, args);
-                if (currentScore > bestScore) {
-                    bestCallable = callable;
-                    bestScore = currentScore;
-                }
-            }
-        }
-        return bestCallable;
-    }
-    
-    private static int getExactnessScore(Class<?>[] types, IRubyObject[] args) {
-        int count = 0;
-        for (int i = 0; i < args.length; i++) {
-            if (types[i].equals(argClass(args[i]))) count++;
-        }
-        return count;
-    }
-
-    
-    // NOTE: The five match methods are arity-split to avoid the cost of boxing arguments
-    // when there's already a cached match. Do not condense them into a single
-    // method.
-    public static JavaCallable matchingCallableArityN(IRubyObject recv, Map cache, JavaCallable[] methods, IRubyObject[] args, int argsLength) {
-        int signatureCode = argsHashCode(args);
-        JavaCallable method = (JavaCallable)cache.get(signatureCode);
-        if (method == null) method = (JavaCallable)findMatchingCallableForArgs(recv, cache, signatureCode, methods, args);
-        return method;
-    }
-    
-    public static JavaCallable matchingCallableArityOne(IRubyObject recv, Map cache, JavaCallable[] methods, IRubyObject arg0) {
-        int signatureCode = argsHashCode(arg0);
-        JavaCallable method = (JavaCallable)cache.get(signatureCode);
-        if (method == null) method = (JavaCallable)findMatchingCallableForArgs(recv, cache, signatureCode, methods, arg0);
-        return method;
-    }
-    
-    public static JavaCallable matchingCallableArityTwo(IRubyObject recv, Map cache, JavaCallable[] methods, IRubyObject arg0, IRubyObject arg1) {
-        int signatureCode = argsHashCode(arg0, arg1);
-        JavaCallable method = (JavaCallable)cache.get(signatureCode);
-        if (method == null) method = (JavaCallable)findMatchingCallableForArgs(recv, cache, signatureCode, methods, arg0, arg1);
-        return method;
-    }
-    
-    public static JavaCallable matchingCallableArityThree(IRubyObject recv, Map cache, JavaCallable[] methods, IRubyObject arg0, IRubyObject arg1, IRubyObject arg2) {
-        int signatureCode = argsHashCode(arg0, arg1, arg2);
-        JavaCallable method = (JavaCallable)cache.get(signatureCode);
-        if (method == null) method = (JavaCallable)findMatchingCallableForArgs(recv, cache, signatureCode, methods, arg0, arg1, arg2);
-        return method;
-    }
-    
-    public static JavaCallable matchingCallableArityFour(IRubyObject recv, Map cache, JavaCallable[] methods, IRubyObject arg0, IRubyObject arg1, IRubyObject arg2, IRubyObject arg3) {
-        int signatureCode = argsHashCode(arg0, arg1, arg2, arg3);
-        JavaCallable method = (JavaCallable)cache.get(signatureCode);
-        if (method == null) method = (JavaCallable)findMatchingCallableForArgs(recv, cache, signatureCode, methods, arg0, arg1, arg2, arg3);
-        return method;
-    }
-    
-    private static interface CallableAcceptor {
-        public boolean accept(Class<?>[] types, IRubyObject[] args);
-    }
-    
-    private static final CallableAcceptor Exact = new CallableAcceptor() {
-        public boolean accept(Class<?>[] types, IRubyObject[] args) {
-            return exactMatch(types, args);
-        }
-    };
-    
-    private static final CallableAcceptor AssignableAndPrimitivable = new CallableAcceptor() {
-        public boolean accept(Class<?>[] types, IRubyObject[] args) {
-            return assignableAndPrimitivable(types, args);
-        }
-    };
-    
-    private static final CallableAcceptor AssignableOrDuckable = new CallableAcceptor() {
-        public boolean accept(Class<?>[] types, IRubyObject[] args) {
-            return assignableOrDuckable(types, args);
-        }
-    };
-    
-    private static boolean exactMatch(Class[] types, IRubyObject... args) {
-        for (int i = 0; i < types.length; i++) {
-            if (!types[i].equals(argClass(args[i]))) return false;
-        }
-        return true;
-    }
-    
-    private static boolean assignableAndPrimitivable(Class[] types, IRubyObject... args) {
-        for (int i = 0; i < types.length; i++) {
-            if (!(assignable(types[i], args[i]) && primitivable(types[i], args[i]))) return false;
-        }
-        return true;
-    }
-    
-    private static boolean assignableOrDuckable(Class[] types, IRubyObject... args) {
-        for (int i = 0; i < types.length; i++) {
-            if (!(assignable(types[i], args[i]) || duckable(types[i], args[i]))) return false;
-        }
-        return true;
-    }
-    
-    private static boolean assignable(Class type, IRubyObject arg) {
-        return JavaClass.assignable(type, argClass(arg));
-    }
-    
-    /**
-     * This method checks whether an argument can be *directly* converted into
-     * the target primitive, i.e. without changing from integral to floating-point.
-     * 
-     * @param type The target type
-     * @param arg The argument to convert
-     * @return Whether the argument can be directly converted to the target primitive type
-     */
-    private static boolean primitivable(Class type, IRubyObject arg) {
-        Class argClass = argClass(arg);
-        if (type.isPrimitive()) {
-            // TODO: This is where we would want to do precision checks to see
-            // if it's non-destructive to coerce a given type into the target
-            // integral primitive
-            if (type == Integer.TYPE || type == Long.TYPE || type == Short.TYPE || type == Character.TYPE) {
-                return argClass == long.class || // long first because it's what Fixnum claims to be
-                        argClass == byte.class ||
-                        argClass == short.class ||
-                        argClass == char.class ||
-                        argClass == int.class ||
-                        argClass == Long.class ||
-                        argClass == Byte.class ||
-                        argClass == Short.class ||
-                        argClass == Character.class ||
-                        argClass == Integer.class;
-            } else if (type == Float.TYPE || type == Double.TYPE) {
-                return argClass == double.class || // double first because it's what float claims to be
-                        argClass == float.class ||
-                        argClass == Float.class ||
-                        argClass == Double.class;
-            } else if (type == Boolean.TYPE) {
-                return argClass == boolean.class ||
-                        argClass == Boolean.class;
-            }
-        }
-        return false;
-    }
-    
-    private static boolean duckable(Class type, IRubyObject arg) {
-        return JavaUtil.isDuckTypeConvertable(argClass(arg), type);
-    }
-    
-    private static RaiseException argTypesDoNotMatch(Ruby runtime, IRubyObject receiver, Object[] methods, Object... args) {
-        ArrayList<Class<?>> argTypes = new ArrayList<Class<?>>(args.length);
-        
-        for (Object o : args) argTypes.add(argClassTypeError(o));
-
-        return argumentError(runtime.getCurrentContext(), methods[0], receiver, argTypes);
-    }
-
-    private static Class argClassTypeError(Object object) {
-        if (object == null) return void.class;
-        if (object instanceof ConcreteJavaProxy) return ((ConcreteJavaProxy) object).getJavaClass();
-
-        return object.getClass();
-    }
-    
-    private static RaiseException argumentError(ThreadContext context, Object method, IRubyObject receiver, List<Class<?>> argTypes) {
-        String methodName = (method instanceof JavaConstructor || method instanceof JavaProxyConstructor) ?
-            "constructor" : ((JavaMethod) method).name().toString();
-
-        return context.getRuntime().newNameError("no " + methodName + " with arguments matching " +
-                argTypes + " on object " + receiver.callMethod(context, "inspect"), null);
-    }
-    
-    public static IRubyObject access(IRubyObject recv, IRubyObject java_type) {
-        int modifiers = ((JavaClass) java_type).javaClass().getModifiers();
-        return recv.getRuntime().newString(Modifier.isPublic(modifiers) ? "public" : (Modifier.isProtected(modifiers) ? "protected" : "private"));
-    }
-
-    public static IRubyObject valid_constant_name_p(IRubyObject recv, IRubyObject name) {
-        RubyString sname = name.convertToString();
-        if (sname.getByteList().length() == 0) {
-            return recv.getRuntime().getFalse();
-        }
-        return Character.isUpperCase(sname.getByteList().charAt(0)) ? recv.getRuntime().getTrue() : recv.getRuntime().getFalse();
-    }
-
-    public static boolean primitive_match(Object v1, Object v2) {
-        if (((Class) v1).isPrimitive()) {
-            if (v1 == Integer.TYPE || v1 == Long.TYPE || v1 == Short.TYPE || v1 == Character.TYPE) {
-                return v2 == Integer.class ||
-                        v2 == Long.class ||
-                        v2 == Short.class ||
-                        v2 == Character.class;
-            } else if (v1 == Float.TYPE || v1 == Double.TYPE) {
-                return v2 == Float.class ||
-                        v2 == Double.class;
-            } else if (v1 == Boolean.TYPE) {
-                return v2 == Boolean.class;
-            }
-            return false;
-        }
-        return true;
-    }
-
-    public static IRubyObject primitive_match(IRubyObject recv, IRubyObject t1, IRubyObject t2) {
-        if (((JavaClass) t1).primitive_p().isTrue()) {
-            Object v1 = ((JavaObject) t1).getValue();
-            Object v2 = ((JavaObject) t2).getValue();
-            return primitive_match(v1, v2) ? recv.getRuntime().getTrue() : recv.getRuntime().getFalse();
-        }
-        return recv.getRuntime().getTrue();
-    }
-
-    public static IRubyObject wrap(IRubyObject recv, IRubyObject java_object) {
-        return getInstance(recv.getRuntime(), ((JavaObject) java_object).getValue());
-    }
-
     public static IRubyObject wrap(Ruby runtime, IRubyObject java_object) {
         return getInstance(runtime, ((JavaObject) java_object).getValue());
-    }
-
-    // Java methods
-    @JRubyMethod(required = 1, optional = 1, frame = true, module = true, visibility = Visibility.PRIVATE)
-    public static IRubyObject define_exception_handler(IRubyObject recv, IRubyObject[] args, Block block) {
-        String name = args[0].toString();
-        RubyProc handler = null;
-        if (args.length > 1) {
-            handler = (RubyProc) args[1];
-        } else {
-            handler = recv.getRuntime().newProc(Block.Type.PROC, block);
-        }
-        recv.getRuntime().getJavaSupport().defineExceptionHandler(name, handler);
-
-        return recv;
-    }
-
-    @JRubyMethod(frame = true, module = true, visibility = Visibility.PRIVATE)
-    public static IRubyObject primitive_to_java(IRubyObject recv, IRubyObject object, Block unusedBlock) {
-        return JavaUtil.primitive_to_java(recv, object, unusedBlock);
     }
 
     /**
      * High-level object conversion utility function 'java_to_primitive' is the low-level version 
      */
+    @Deprecated
     @JRubyMethod(frame = true, module = true, visibility = Visibility.PRIVATE)
     public static IRubyObject java_to_ruby(IRubyObject recv, IRubyObject object, Block unusedBlock) {
         try {
             return JavaUtil.java_to_ruby(recv.getRuntime(), object);
         } catch (RuntimeException e) {
-            recv.getRuntime().getJavaSupport().handleNativeException(e);
+            recv.getRuntime().getJavaSupport().handleNativeException(e, null);
             // This point is only reached if there was an exception handler installed.
             return recv.getRuntime().getNil();
         }
@@ -1469,11 +937,13 @@ public class Java implements Library {
     /**
      * High-level object conversion utility. 
      */
+    @Deprecated
     @JRubyMethod(frame = true, module = true, visibility = Visibility.PRIVATE)
     public static IRubyObject ruby_to_java(final IRubyObject recv, IRubyObject object, Block unusedBlock) {
         return JavaUtil.ruby_to_java(recv, object, unusedBlock);
     }
 
+    @Deprecated
     @JRubyMethod(frame = true, module = true, visibility = Visibility.PRIVATE)
     public static IRubyObject java_to_primitive(IRubyObject recv, IRubyObject object, Block unusedBlock) {
         return JavaUtil.java_to_primitive(recv, object, unusedBlock);
@@ -1518,19 +988,19 @@ public class Java implements Library {
                 if (methodName.equals("toString") && methodArgsLength == 0) {
                     return proxy.getClass().getName();
                 } else if (methodName.equals("hashCode") && methodArgsLength == 0) {
-                    return new Integer(proxy.getClass().hashCode());
+                    return Integer.valueOf(proxy.getClass().hashCode());
                 } else if (methodName.equals("equals") && methodArgsLength == 1 && parameterTypes[0].equals(Object.class)) {
                     return Boolean.valueOf(proxy == nargs[0]);
                 }
                 Ruby runtime = recv.getRuntime();
                 int length = nargs == null ? 0 : nargs.length;
                 IRubyObject[] rubyArgs = new IRubyObject[length + 2];
-                rubyArgs[0] = JavaObject.wrap(runtime, proxy);
+                rubyArgs[0] = JavaUtil.convertJavaToRuby(runtime, proxy);
                 rubyArgs[1] = new JavaMethod(runtime, method);
                 for (int i = 0; i < length; i++) {
-                    rubyArgs[i + 2] = JavaObject.wrap(runtime, nargs[i]);
+                    rubyArgs[i + 2] = JavaUtil.convertJavaToRuby(runtime, nargs[i]);
                 }
-                return JavaUtil.convertArgument(runtime, proc.call(runtime.getCurrentContext(), rubyArgs), method.getReturnType());
+                return proc.call(runtime.getCurrentContext(), rubyArgs).toJava(method.getReturnType());
             }
         }));
     }
@@ -1552,8 +1022,8 @@ public class Java implements Library {
 
         // hashcode is a combination of the interfaces and the Ruby class we're using
         // to implement them
-        if (!Boolean.getBoolean("jruby.interfaces.useProxy")) {
-            int interfacesHashCode = argsHashCode(interfaces);
+        if (!SafePropertyAccessor.getBoolean("jruby.interfaces.useProxy")) {
+            int interfacesHashCode = interfacesHashCode(interfaces);
             // if it's a singleton class and the real class is proc, we're doing closure conversion
             // so just use Proc's hashcode
             if (wrapper.getMetaClass().isSingleton() && wrapper.getMetaClass().getRealClass() == runtime.getProc()) {
@@ -1594,7 +1064,7 @@ public class Java implements Library {
                     if (methodName == "toString" && length == 0) {
                         return proxy.getClass().getName();
                     } else if (methodName == "hashCode" && length == 0) {
-                        return new Integer(proxy.getClass().hashCode());
+                        return Integer.valueOf(proxy.getClass().hashCode());
                     } else if (methodName == "equals" && length == 1) {
                         Class[] parameterTypes = (Class[]) parameterTypeCache.get(method);
                         if (parameterTypes == null) {
@@ -1608,10 +1078,38 @@ public class Java implements Library {
 
                     IRubyObject[] rubyArgs = JavaUtil.convertJavaArrayToRuby(runtime, nargs);
                     try {
-                        return JavaUtil.convertRubyToJava(RuntimeHelpers.invoke(runtime.getCurrentContext(), wrapper, methodName, rubyArgs), method.getReturnType());
+                        return RuntimeHelpers.invoke(runtime.getCurrentContext(), wrapper, methodName, rubyArgs).toJava(method.getReturnType());
                     } catch (RuntimeException e) { e.printStackTrace(); throw e; }
                 }
             }));
         }
+    }
+    
+    public static IRubyObject allocateProxy(Object javaObject, RubyClass clazz) {
+        IRubyObject proxy = clazz.allocate();
+        if (proxy instanceof JavaProxy) {
+            ((JavaProxy)proxy).setObject(javaObject);
+        } else {
+            JavaObject wrappedObject = JavaObject.wrap(clazz.getRuntime(), javaObject);
+            proxy.dataWrapStruct(wrappedObject);
+        }
+
+        return proxy;
+    }
+
+    public static IRubyObject wrapJavaObject(Ruby runtime, Object object) {
+        return allocateProxy(object, getProxyClassForObject(runtime, object));
+    }
+    
+    private static int interfacesHashCode(Class[] a) {
+        if (a == null)
+            return 0;
+
+        int result = 1;
+
+        for (Class element : a)
+            result = 31 * result + (element == null ? 0 : element.hashCode());
+
+        return result;
     }
 }
